# kentik-api-rust

./: Cargo.toml  README.md
benches/: benches.rs
examples/: basic.rs  proxy.rs  server.rs  tags.rs
src/: client.rs  lib.rs
src/async/: client.rs  mod.rs  retry.rs
src/core/: client.rs  mod.rs
src/dns/: client.rs  mod.rs
src/tag/: change.rs  client.rs  mod.rs
tests/: async.rs  basic.rs  dns.rs
tests/server/: mod.rs
