[package]
name    = "kentik-api"
version = "0.0.1"
authors = ["Will <will@kentik.com>"]
edition = "2018"

[dependencies]
backoff           = "0.1.3"
log               = "0.4.6"
crossbeam-channel = "0.3.8"
serde             = "1.0.89"
serde_derive      = "1.0.89"

[dependencies.reqwest]
version  = "0.9.11"
features = ["rustls-tls"]
default-features = false

[dev-dependencies]
actix-rt      = "0.2.2"
actix-service = "0.3.5"
actix-web     = "1.0.0-alpha.2"
bytes         = "0.4.12"
base64        = "0.10.1"
criterion     = "0.2.10"
env_logger    = "0.6.1"
futures       = "0.1"
rand          = "0.6.5"
serde_json    = "1.0.39"

[[bench]]
name    = "benches"
harness = false

[profile.release]
lto   = true
debug = false
