[package]
name    = "kentik-api"
version = "0.0.1"
authors = ["Will <will@kentik.com>"]
edition = "2018"

[dependencies]
backoff           = "0.1.3"
bytes             = "0.4.12"
crossbeam-channel = "0.3.8"
futures           = "0.1.26"
futures-retry     = "0.3.0"
log               = "0.4.6"
rmp-serde         = "0.13.7"
serde             = "1.0.89"
serde_derive      = "1.0.89"
serde_bytes       = "0.10.5"
tokio             = "0.1.18"

[dependencies.reqwest]
version  = "0.9.13"
features = ["rustls-tls"]
default-features = false

[dev-dependencies]
actix-rt      = "=0.2.2"
actix-service = "=0.3.4"
base64        = "0.10.1"
criterion     = "0.2.10"
env_logger    = "0.6.1"
rand          = "0.6.5"
serde_json    = "1.0.39"

[dev-dependencies.actix-http]
version  = "=0.1.0-alpha.2"

[dev-dependencies.actix-web]
version  = "=1.0.0-alpha.2"
features = []
default-features = false

[dev-dependencies.actix-web-codegen]
version  = "=0.1.0-alpha.1"

[[bench]]
name    = "benches"
harness = false

[profile.release]
lto   = false
debug = false
