[package]
name    = "kentik-api"
version = "0.0.6"
authors = ["Will <will@kentik.com>"]
edition = "2018"

[dependencies]
backoff           = "0.4.0"
bytes             = "1.5.0"
crossbeam-channel = "0.5.11"
futures           = "0.3.30"
futures-retry     = "0.6.0"
log               = "0.4.20"
rmp-serde         = "1.1.2"
serde_bytes       = "0.11.14"

[dependencies.reqwest]
version  = "0.11.24"
features = ["blocking", "json", "rustls-tls"]
default-features = false

[dependencies.serde]
version  = "1.0.196"
features = ["derive"]

[dependencies.tokio]
version  = "1.36.0"
features = ["rt-multi-thread"]
default-features = false

[dev-dependencies]
actix-rt      = "=0.2.2"
actix-service = "=0.3.4"
base64        = "0.10.1"
criterion     = "0.5.1"
env_logger    = "0.11.1"
http          = "0.2.6"
rand          = "0.6.5"
serde_json    = "1.0.39"

[dev-dependencies.actix-http]
version  = "=0.1.0-alpha.2"

[dev-dependencies.actix-web]
version  = "=1.0.0-alpha.2"
features = []
default-features = false

[dev-dependencies.actix-web-codegen]
version  = "=0.1.0-alpha.1"

[dev-dependencies.bytes_old]
package  = "bytes"
version  = "0.4.12"

[dev-dependencies.futures_old]
package  = "futures"
version  = "0.1.26"

[[bench]]
name    = "benches"
harness = false

[profile.release]
lto   = false
debug = false
